Fixed blurry images and set page paths for homepage and regular pages

--- a/src/Slices/BoxGrid/BoxGrid.scss
+++ b/src/Slices/BoxGrid/BoxGrid.scss
@@ -59,6 +59,20 @@
 		}
 	}
 
+	a {
+		align-self: center;
+		display: block;
+		text-align: center;
+
+		.cta {
+			@include cta;
+
+			&:hover {
+				@include ctahover;
+			}
+		}
+	}
+
 	.grid-cta {
 		align-items: center;
 		display: flex;
